# RGD-pi0

./: .clang-format  .gitignore  README.md  meson.build
config/: sf_vs_p_OBLD2.toml  study1.toml
data/: data.hipo
hipo4/: bank.cpp  bank.h  dictionary.h  event.cpp  event.h  hipoeventiterator.h  meson.build  parser.cpp  parser.h  reader.cpp  reader.h  record.h
include/Core/: Constantes.hpp  Helpers.hpp  Particle.hpp  ReadBank.hpp  Runs.hpp  barkeep.hpp
include/Plotting/: Colors.hpp  Draw.hpp
include/study1/: Drawing.hpp  Histograms.hpp  Reader.hpp
include/study1/models/: RGA_inbending_pass1.hpp  RGA_inbending_pass2.hpp  RGA_outbending_pass1.hpp  RGA_outbending_pass2.hpp  RGC_Summer2022_pass1.hpp
include/thread_pool/: BS_thread_pool_utils.hpp  multi_thread.hpp
plots/electron/C/: chi2_e.C  p_e.C  phi_e.C  theta_e.C  vz_e.C
plots/electron/root/: chi2_e.root  p_e.root  phi_e.root  theta_e.root  vz_e.root
plots/electron/tex/: chi2_e.tex  p_e.tex  phi_e.tex  theta_e.tex  vz_e.tex
src/: main.cpp
src/Core/: Particle.cpp
src/study1/: Drawing.cpp  Reader.cpp
subprojects/: LICENSE  README.md  meson.build  tomlplusplus.wrap
